--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">DoorMonitor</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="local_service_started">Local Service Started</string>
+    <string name="local_service_stopped">Local Service Stopped</string>
 
 </resources>
